STYLE: Added new font and fixed text alignments.

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: "Space Mono", monospace;
-    font-weight: 400;
+    font-family: "Teko", sans-serif;
+    font-weight: 700;
     font-style: normal;
+    font-size: 1.5rem;
 }
 
 body {
@@ -30,7 +31,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     gap: 1rem;
 }
 
@@ -41,6 +42,9 @@ button {
     background-repeat: no-repeat;
     background-size:cover;
     background-image: url("leftImage.jpeg");
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
 }
 
 #logoBlock {
@@ -70,10 +74,10 @@ button {
 }
 
 #rightTopSide {
-    font-family: "Space Mono", monospace;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 1.75rem;
+    width: 55%;
+    border: red 1px solid;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #rightMiddleSide {
